--- a/moblie_app_project/pubspec.yaml
+++ b/moblie_app_project/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   provider: ^6.1.2
   firebase_ui_auth: ^1.16.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
