--- a/moblie_app_project/pubspec.yaml
+++ b/moblie_app_project/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   firebase_ui_auth: ^1.16.0
   google_sign_in: ^6.2.2
+  google_maps_flutter: ^2.10.0
 
 dev_dependencies:
   flutter_test:
