--- a/moblie_app_project/android/build.gradle
+++ b/moblie_app_project/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    ext.kotlin_version = "1.9.0" // Kotlin 버전 지정
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 allprojects {
     repositories {
         google()
