--- a/moblie_app_project/pubspec.yaml
+++ b/moblie_app_project/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_ui_auth: ^1.16.0
   google_sign_in: ^6.2.2
   google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
