--- a/moblie_app_project/pubspec.yaml
+++ b/moblie_app_project/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   geolocator: ^13.0.2
   http: ^1.2.2
   geocoding: ^3.0.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - .env
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
