--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   stop_watch_timer: ^3.2.1
   slide_countdown: ^2.0.2
   flutter_expandable_fab: ^2.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
