--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   slide_countdown: ^2.0.2
   flutter_expandable_fab: ^2.3.0
   intl: ^0.19.0
+  auto_size_text: ^3.0.0
+  auto_size_text_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
