--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.19.0
   auto_size_text: ^3.0.0
   auto_size_text_plus: ^3.0.2
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
